Condense value-DAG evaluation experiment